prod_snapshot_2015-09-24_1030/objects/Opp_Revenue_Sched__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opp Revenue Schedules</relationshipLabel>
        <relationshipName>Opp_Revenue_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opp Revenue Schedules</relationshipLabel>
        <relationshipName>Opp_Revenue_Schedules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revenue_Month__c</fullName>
        <label>Revenue Month</label>
        <type>Date</type>
    </fields>
    <label>Opp Revenue Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORS-{00000000}</displayFormat>
        <label>Opp Revenue Sched Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opp Revenue Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>